# y_stocks

./: .gitignore  env.toml  main.py  pyproject.toml
data/san_yang_kai_tai/: merged_net_values.csv  净值-2018-净值.csv  净值-2019-净值.csv  净值-2020-净值.csv  净值-2021-净值.csv  净值-2022-净值.csv
notebook/: 00700交易能力评估.ipynb  Debug.ipynb  ROE分析.ipynb  bak_一年滚动回报率分析.ipynb  中证500一年滚动收益分析.ipynb  净值分析.ipynb  净值计算.ipynb  净利润分析.ipynb  沪深300一年滚动收益分析.ipynb  纳斯达克100一年滚动收益分析.ipynb  股价对比.ipynb
script/: merge_net_value_csv.py  net_profit_analysis.py  read_csv.py
src/ystocks/: __init__.py  functools.py  netvalues.py  settings.py  stocks.py  utility.py
test-cached/: cache.db
tests/: test_net_value_calculator.py  test_stocks.py  test_utility.py  test_ystocks.py
