[tool.poetry]
name = "ystocks"
version = "0.1.2"
description = "stock investment analysis"
authors = ["yapex <yapex.yin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
akshare = "^1.6.44"
pandas = "^1.4.3"
snoop = "^0.4.1"
tqdm = "^4.64.0"
matplotlib = "^3.5.2"
toml = "^0.10.2"
loguru = "^0.6.0"
diskcache = "^5.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
jupyter = "^1.0.0"
ipykernel = "^6.15.0"
jupyterlab = "^3.4.4"
jupyterlab-code-formatter = "^1.5.1"
isort = "^5.10.1"
black = "^22.6.0"
flake8 = "^5.0.4"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# 添加清华镜像
[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

#阿里云
[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"